@@ -1,3 +1,6 @@
+Sun Aug  7 2011 Aleksey
+	* Bugfix: percents option was broken in v1.2.6
+
 Fri Aug  5 2011 Aleksey
 	* supported verification of sha256, sha512 and other hash sums
 
